# CourseWork2

./: CMakeLists.txt  main.cpp
graphics/: BitMap.cpp  BitMap.h  CMakeLists.txt  Color.cpp  Color.h  Vector.cpp  Vector.h
gui/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  Viewer.cpp  Viewer.h
gui/qgraphics/: BitMapQ.cpp  BitMapQ.h  ColorQ.h  Vec2DQ.h
gui/toolbar/: ToolBar.cpp  ToolBar.h
gui/toolbar/tools/: Circle.cpp  Circle.h  ColorSetting.cpp  ColorSetting.h  CrossSquare.cpp  CrossSquare.h  Filter.cpp  Filter.h  Rotator.cpp  Rotator.h  Tool.cpp  Tool.h
gui/tools/: Circle.cpp  Circle.h  CrossSquare.cpp  CrossSquare.h  Filter.cpp  Filter.h  Rotator.cpp  Rotator.h  ToolBar.cpp  ToolBar.h
gui/viewer/: ImageLabel.cpp  ImageLabel.h  Viewer.cpp  Viewer.h
